--- a/index.html
+++ b/index.html
@@ -28,10 +28,15 @@
     <main>
         <div class="container">
             <article class="main-info">
-                <h2>ОСНОВЫ:</h2>
-                <h3>HTML</h3>
-                <h3>CSS</h3>
-                <h3>JS</h3>
+                <h2>меня зовут: Александр</h2>
+                <h2>изучаю: Frontend</h2>
+                <pre><code>
+                    1 let basic = [
+                    2    'HTML',
+                    3    'CSS',
+                    4    'JS',
+                    5    ];
+                </code></pre>
             </article>
             <div class="swiper mySwiper">
                 <div class="swiper-wrapper">
