--- a/index.html
+++ b/index.html
@@ -30,13 +30,11 @@
             <article class="main-info">
                 <h2>меня зовут: Александр</h2>
                 <h2>изучаю: Frontend</h2>
-                <pre><code>
-                    1 let basic = [
-                    2    'HTML',
-                    3    'CSS',
-                    4    'JS',
-                    5    ];
-                </code></pre>
+                <h2>let basic = [</h2>
+                <h2>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;'HTML',</h2>
+                <h2>&nbsp;&nbsp;&nbsp;&nbsp;'CSS',</h2>
+                <h2>&nbsp;&nbsp;'JS',</h2>
+                <h2>];</h2>
             </article>
             <div class="swiper mySwiper">
                 <div class="swiper-wrapper">
